# index_numerorum

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: tests.yml
PRDs/: .gitignore  001-local-embedding-toolkit.md  002-dx-ux-testing-readme.md  003-terminal-polish.md  004-vector-store-smart-matching.md  005-wizard-harness.md  006-security-hardening.md  007-business-templates.md  cookbook.md  recipes.md
src/index_numerorum/: __init__.py  cli.py  config.py  embed.py  io.py  keys.py  neighbors.py  similarity.py  store.py  templates.py  visuals.py  wizard.py
tests/: conftest.py
tests/integration/: test_compose_pipeline.py  test_embed_pipeline.py  test_neighbor_pipeline.py
tests/unit/: test_cli.py  test_config.py  test_config_heuristics.py  test_io.py  test_keys.py  test_similarity.py  test_store.py  test_templates.py  test_visuals.py  test_wizard.py
