[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "index-numerorum"
version = "0.1.0"
description = "Local word embedding & similarity toolkit for sensitive data"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "rokkovach" }]
keywords = ["embeddings", "similarity", "nlp", "local", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.0",
    "sentence-transformers>=3.0",
    "torch>=2.0",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
index-numerorum = "index_numerorum.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/index_numerorum"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring models",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"cli.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
